Thymeleaf layout 정리

--- a/src/main/resources/templates/fragment/header-list.html
+++ b/src/main/resources/templates/fragment/header-list.html
@@ -3,7 +3,7 @@
     <!--headerFragment 선언-->
     <header th:fragment="headerFragment">
         <div class="header-container">
-            <a href="/" class="logo"><img src="images/logo_wh.png"></a>
+            <a href="/" class="logo"><img src="/images/logo_pk.png"></a>
             <ul class="subMenu">
                 <li><a href="#none">호스트 되기</a></li>
                 <li><a href="#none"><i class="fas fa-globe"></i></a></li>
