--- a/src/main/resources/templates/fragment/config-list.html
+++ b/src/main/resources/templates/fragment/config-list.html
@@ -15,7 +15,11 @@
         <!-- 노토산스 -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
 
-        <script src="js/jquery-3.1.1.min.js"></script> <!-- 값 제어를 위해 jquery -->
+        <!-- 스와이프 플러그인 -->
+        <link rel="stylesheet" href="/css/swiper.min.css">
+        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+        <script src="/js/jquery-3.1.1.min.js"></script> <!-- 값 제어를 위해 jquery -->
 
         <!-- Content Page의 CSS fragment 삽입 -->
         <th:block layout:fragment="css"></th:block>
