--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -8,12 +8,11 @@ header {
     -o-transition:all 0.5s ease; -moz-transition:all 0.5s ease; -ms-transition:all 0.5s ease; -webkit-transition:all 0.5s ease;
 }
 .header-container {
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    max-width: 1440px;
     position: relative;
+    top:50%;
+    transform: translateY(-50%);
+    max-width: 1600px;
+    margin:0 auto;
 }
 .header-container .logo {
     display: inline-block;
@@ -83,7 +82,7 @@ header {
     height:40px;
     border-radius: 40px;
     background:#fff;
-    margin:0 12px;
+    margin-left:12px;
     padding:0 8px 1px 13px;
     vertical-align: middle;
     border:1px solid #ddd;
@@ -203,7 +202,7 @@ header.scroll .header-container .subMenu > li > a > i {
 /* page 공통 스타일 */
 .page {
     width:100%;
-    max-width: 1440px;
+    max-width: 1600px;
     padding:60px 80px 40px;
     margin:0 auto;
 }
