--- a/src/main/resources/templates/fragment/header-main.html
+++ b/src/main/resources/templates/fragment/header-main.html
@@ -5,7 +5,7 @@
         <div class="header-container">
             <a href="/" class="logo"><img src="images/logo_wh.png"></a>
             <ul class="subMenu">
-                <li><a href="#none">호스트 되기</a></li>
+                <li><a th:href="@{/oauth2/authorization/google}">호스트 되기</a></li>
                 <li><a href="#none"><i class="fas fa-globe"></i></a></li>
                 <li>
                     <div class="hamburger"><i class="fas fa-bars"></i></div>
