--- a/src/main/resources/templates/fragment/config-main.html
+++ b/src/main/resources/templates/fragment/config-main.html
@@ -17,6 +17,8 @@
 
         <script src="js/jquery-3.1.1.min.js"></script> <!-- 값 제어를 위해 jquery -->
 
+        <script src="js/style.js"></script> <!-- 기본 js -->
+
         <!-- Content Page의 CSS fragment 삽입 -->
         <th:block layout:fragment="css"></th:block>
 
