--- a/src/main/resources/templates/fragment/header-main.html
+++ b/src/main/resources/templates/fragment/header-main.html
@@ -1,11 +1,11 @@
-<html lagn="ko" xmlns:th="http://www.thymeleaf.org">
+<html lagn="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <!--headerFragment 선언-->
     <header th:fragment="headerFragment">
         <div class="header-container">
             <a href="/" class="logo"><img src="images/logo_wh.png"></a>
             <ul class="subMenu">
-                <li><a th:href="@{/oauth2/authorization/google}">호스트 되기</a></li>
+                <li><a>호스트 되기</a></li>
                 <li><a href="#none"><i class="fas fa-globe"></i></a></li>
                 <li>
                     <div class="hamburger"><i class="fas fa-bars"></i></div>
@@ -13,8 +13,10 @@
                         <i class="fas fa-user-circle"></i>
                         <div class="login-box">
                             <ul>
-                                <li><a onclick="showLogin();">회원가입</a></li>
-                                <li><a href="">로그인</a></li>
+                                <li sec:authorize="isAnonymous()"><a onclick="showLogin();">회원가입</a></li>
+                                <li sec:authorize="isAnonymous()"><a onclick="showLogin();">로그인</a></li>
+                                <li sec:authorize="isAuthenticated()"><a th:href="@{/mypage}" th:text="${userName}"></a></li>
+                                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">로그아웃</a></li>
                                 <li><a href="">숙소 호스트 되기</a></li>
                             </ul>
                         </div>
@@ -32,7 +34,7 @@
                 <h2><span onClick="close_pop();"><i class="fas fa-times"></i></span>로그인 또는 회원가입</h2>
                 <div>
                     <ul>
-                        <li>
+                        <li th:onclick="'location.href=\''+ @{/oauth2/authorization/google} + '\''">
                             <i class="fab fa-google"></i>구글로 로그인하기
                         </li>
                     </ul>
