--- a/src/main/resources/templates/fragment/header-list.html
+++ b/src/main/resources/templates/fragment/header-list.html
@@ -35,7 +35,10 @@
                 <div>
                     <ul>
                         <li th:onclick="'location.href=\''+ @{/oauth2/authorization/google} + '\''">
-                            <i class="fab fa-google"></i>구글로 로그인하기
+                            <img src="/images/google_icon.png">구글로 로그인하기
+                        </li>
+                        <li th:onclick="'location.href=\''+ @{/oauth2/authorization/naver} + '\''">
+                            <img src="/images/naver_icon.png">네이버로 로그인하기
                         </li>
                     </ul>
                 </div>
