--- a/src/main/resources/templates/fragment/config-list.html
+++ b/src/main/resources/templates/fragment/config-list.html
@@ -19,7 +19,13 @@
         <link rel="stylesheet" href="/css/swiper.min.css">
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-        <script src="/js/jquery-3.1.1.min.js"></script> <!-- 값 제어를 위해 jquery -->
+        <!-- 값 제어를 위해 jquery, datePicker -->
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+        <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+
+        <!-- 아임포트 결제시스템 -->
+        <script src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js" type="text/javascript"></script>
 
         <script src="/js/style.js"></script> <!-- 기본 js -->
 
