--- a/src/main/resources/templates/fragment/config-main.html
+++ b/src/main/resources/templates/fragment/config-main.html
@@ -15,7 +15,10 @@
         <!-- 노토산스 -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
 
-        <script src="js/jquery-3.1.1.min.js"></script> <!-- 값 제어를 위해 jquery -->
+        <!-- 값 제어를 위해 jquery, datePicker -->
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+        <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
 
         <script src="js/style.js"></script> <!-- 기본 js -->
 
