--- a/src/main/resources/templates/fragment/header-main.html
+++ b/src/main/resources/templates/fragment/header-main.html
@@ -16,6 +16,7 @@
                                 <li sec:authorize="isAnonymous()"><a onclick="showLogin();">회원가입</a></li>
                                 <li sec:authorize="isAnonymous()"><a onclick="showLogin();">로그인</a></li>
                                 <li sec:authorize="isAuthenticated()"><a th:href="@{/mypage}" th:text="${userName}"></a></li>
+                                <li sec:authorize="isAuthenticated()"><a th:href="@{/home/book}">여행</a></li>
                                 <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">로그아웃</a></li>
                                 <li><a href="">숙소 호스트 되기</a></li>
                             </ul>
