여행 페이지

--- a/src/main/resources/templates/home/detail.html
+++ b/src/main/resources/templates/home/detail.html
@@ -87,7 +87,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a >예약하기</a>
+                        <a th:href="@{/book/{id}(id = ${home.id})}">예약하기</a>
                         <div class="total-container">
                             총 합계
                             <p>₩<span id="num_nights">0</span></p>
