--- a/src/main/resources/static/css/travel.css
+++ b/src/main/resources/static/css/travel.css
@@ -88,6 +88,9 @@ header {
 .tab-list > ul > li > .image > div > img {
     width:100%;
 }
+.tab-list > ul > li > .image > div.img:not(:first-child) {
+    display: none;
+}
 .tab-list > ul > li > .image > .gra-box {
     background-image: linear-gradient(rgba(34, 34, 34, 0) 0%, rgba(34, 34, 34, 0.6) 100%) !important;
     height: 103px !important;
@@ -133,8 +136,12 @@ header {
     border-radius: 8px;
     overflow: hidden;
 }
+.tab-list > ul > li > .detail > .image:not(:first-child) {
+    display:none;
+}
 .tab-list > ul > li > .detail > .image > img {
     width:100%;
+    height:100%;
 }
 .tab-list > ul > li > .detail > p {
     width:calc(100% - 56px);
